feat: ajuste na estrutura de json na response 200
