# openapi.yml
@@ -32,16 +32,6 @@
           }
         ],
         "responses": {
-          "500": {
-            "description": "Erro no servidor",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorPostResponse"
-                }
-              }
-            }
-          },
           "200": {
             "description": "Lista de posts retornada com sucesso",
             "content": {
@@ -51,6 +41,16 @@
                   "items": {
                     "$ref": "#/components/schemas/PostEntity"
                   }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Erro no servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorPostResponse"
                 }
               }
             }
@@ -79,22 +79,22 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "Redirecionamento para a URL do post",
+          "400": {
+            "description": "ID inválido ou erro na requisição",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/SimpleUrlResponse"
+                  "$ref": "#/components/schemas/ErrorClickPostsResponse"
                 }
               }
             }
           },
-          "400": {
-            "description": "ID inválido ou erro na requisição",
+          "200": {
+            "description": "Redirecionamento para a URL do post",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/IdClickUrlResponse"
                 }
               }
             }
@@ -111,12 +111,25 @@
         "description": "Retorna um array com a contagem de cliques organizada por post.\nCada item do array contém o título do post como chave e um objeto com:\n- count: número total de cliques\n- date: data do último registro\n",
         "operationId": "getClickCounts",
         "responses": {
+          "200": {
+            "description": "Contagens de cliques obtidas com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ClickCountsUrlResponse"
+                  }
+                }
+              }
+            }
+          },
           "500": {
             "description": "Erro interno ao obter contagens de cliques",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
-                  "type": "string"
+                  "$ref": "#/components/schemas/ErrorClickPostsResponse"
                 }
               }
             }
@@ -127,17 +140,6 @@
   },
   "components": {
     "schemas": {
-      "ErrorPostResponse": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
-          }
-        }
-      },
       "PostEntity": {
         "type": "object",
         "properties": {
@@ -191,10 +193,56 @@
           }
         }
       },
-      "SimpleUrlResponse": {
+      "ErrorPostResponse": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string"
+          },
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "ErrorClickPostsResponse": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string"
+          },
+          "message": {
+            "type": "string"
+          }
+        }
+      },
+      "IdClickUrlResponse": {
         "type": "object",
         "properties": {
           "url": {
+            "type": "string"
+          },
+          "code": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "count": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "ClickCountsUrlResponse": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "date": {
+            "type": "string"
+          },
+          "count": {
             "type": "string"
           }
         }
